--- a/app/views/friends/_nofriend.html.erb
+++ b/app/views/friends/_nofriend.html.erb
@@ -1,4 +1,9 @@
-<figure>
-  <%= image_tag "person.png" %>
-  <p>No hay mas amig@s cerca....</p>
-</figure>
+<div class="well">
+	<figure class="personaje">
+	  <%= image_tag "person.png" %>
+	  <div role="alert" class="alert alert-danger">
+      	<strong>No</strong> hay mas amig@s cerca....
+      </div>
+	  
+	</figure>
+</div>
