--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,22 +3,22 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <div class="form-group"><%= f.label :email %><br />
+  <%= f.email_field :email, autofocus: true, :class => "form-control" %></div>
 
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name %></div>
+  <div class="form-group"><%= f.label :name %><br />
+  <%= f.text_field :name, :class => "form-control" %></div>
 
-  <div><%= f.label :age %><br />
-  <%= f.text_field :age %></div>
+  <div class="form-group"><%= f.label :age %><br />
+  <%= f.text_field :age, :class => "form-control" %></div>
 
-  <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+  <div class="form-group"><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
+    <%= f.password_field :password, autocomplete: "off", :class => "form-control" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+  <div class="form-group"><%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div class="form-group"><%= f.submit "Sign up", :class => "btn btn-primary" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
