--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,29 +5,59 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 </head>
 <body>
+
   <header>
-    <% if user_signed_in? %>
-      <%= link_to "Salir", destroy_user_session_path, method: :delete %>
-      <%= image_tag Gravatar.new(current_user.email).image_url %>
-    <% end %>
-    <h1>TE GUSTA O NO</h1>
+    <nav class="navbar navbar-inverse navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          </button>
+          <h1>TE GUSTA O NO</h1>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse barra-nav">
+          <% if user_signed_in? %>
+
+            <%= link_to "Salir", destroy_user_session_path, :class => "btn btn-success", method: :delete %>
+
+            <div class="img-user">
+            <%= image_tag Gravatar.new(current_user.email).image_url %>
+            </div>
+          <% end %>
+        </div>
+        <!--/.navbar-collapse -->
+      </div>
+    </nav>
   </header>
 
-  <p>Elige aquellos amig@s que te gustan de forma anonima, te avisaremos si ambos coinciden, el resto va por tu cuenta.</p>
+  
 
-  <div class="content">
-    <% flash.each do |name, err|%>
-      <%= content_tag :div, err, class: name %>
-    <% end %>
+  <div class="container">
+    <div class="col-lg-6 col-lg-offset-3">
+      <h3 class="align-center">Elige aquellos amig@s que te gustan de forma anonima, te avisaremos si ambos coinciden, el resto va por tu cuenta.</h3>
+    </div>
+    <div class="col-lg-4 col-lg-offset-4">
+      <% flash.each do |name, err|%>
+        <%= content_tag :div, err, class: name %>
+      <% end %>
 
-    <%= yield %>
+      <%= yield %>
+    </div>
+
+    <div class="col-lg-12 align-center">
+      <footer>
+       <p>Escribenos en twitter <a href="#">@tegustaono</a></p>
+      </footer>
+    </div>
   </div>
 
-  <footer>
-    <p>Escribenos en twitter <a href="#">@tegustaono</a></p>
-  </footer>
+  
 
 </body>
 </html>
